Modified at index file

--- a/public/index.html
+++ b/public/index.html
@@ -14,20 +14,17 @@
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" 
         crossorigin="anonymous">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>BIMS</title>
+    <title>BIS APP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      This project was developed by Williamcodes for the purpose of business owners to 
+      be able to manage their business activities easily like keeping track of products stock,
+      sales per day, month, and year etc.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      Signature: Williamcodes.Inc
     -->
   </body>
 </html>
