contact info addd

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       be able to manage their business activities easily like keeping track of products stock,
       sales per day, month, and year etc.
 
+        Contact Info
+      ----------------
+      Email: makassyw05@gmail.com 
+      Phone: +255 759 957 414 | +255 768 693 933
       Signature: Williamcodes.Inc
     -->
   </body>
