--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" 
         crossorigin="anonymous">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>BIS APP</title>
+    <title>BUSINESS INVENTORY SYSTEM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
